// Bun Snapshot v1, https://bun.sh/docs/test/snapshots
// W31: 12 complete bodies reviewed in W31e-bun-alignment.json.

exports[`Toggle should Toggle snapshot 1`] = `
"<div>
  <div data-group="true" class=" OHcpb6mbecymn_jvwl OHck7hf11blu0mqifa OLcursor-vpointer OHa8_8n2alwf3oubm2 OHbpp24yclj9od9q85 OHckda58d96gj5bly0 OHdit8m7997wtw7bem OHaoeu23px7o0vhcq1 RHaqd7161j8_2ivxzf OLheight-v28px  OLpadding-v4px   RHdidckvlum8ldfq02 OLwidth-v50px">
    <div class=" OHa27vz2igz6c7klbx OHdlgner8s0_zhmqu_ OLheight-v20px OLwidth-v20px OLoutline-v4px OHcsqacomjnix7p_wp OHaoeu23px7o0vhcq1    ">
    </div>
  </div>
  <input type="hidden" value="false">
</div>"
`;

exports[`Toggle should Toggle snapshot 2`] = `
"<div>
  <div aria-disabled="true" data-group="true" class=" OHcpb6mbecymn_jvwl OHck7hf11blu0mqifa OLcursor-vpointer OHa8_8n2alwf3oubm2 OHbpp24yclj9od9q85 OHckda58d96gj5bly0 OHdit8m7997wtw7bem OHaoeu23px7o0vhcq1 RHaqd7161j8_2ivxzf OLheight-v28px  OLpadding-v4px   RHdidckvlum8ldfq02 OLwidth-v50px">
    <div class=" OHa27vz2igz6c7klbx OHdlgner8s0_zhmqu_ OLheight-v20px OLwidth-v20px OLoutline-v4px OHcsqacomjnix7p_wp OHaoeu23px7o0vhcq1    ">
    </div>
  </div>
  <input type="hidden" value="false">
</div>"
`;

exports[`Toggle should Toggle snapshot 3`] = `
"<div>
  <div data-group="true" class=" OHcpb6mbecymn_jvwl OHck7hf11blu0mqifa OLcursor-vpointer OHa8_8n2alwf3oubm2 OHbpp24yclj9od9q85 OHckda58d96gj5bly0 OHdit8m7997wtw7bem OHaoeu23px7o0vhcq1 RHbansxgyr8bgxkfmu OLheight-v28px RHam1rr89b7z6bsawm OLpadding-v4px   RHb50seyoq89wvebmm OLwidth-v50px">
    <div class=" OHa27vz2igz6c7klbx OHdlgner8s0_zhmqu_ OLheight-v20px OLwidth-v20px OLoutline-v4px OHcsqacomjnix7p_wp OHaoeu23px7o0vhcq1    RHb_rk0wp7a8rynsfj">
    </div>
  </div>
  <input type="hidden" value="true">
</div>"
`;

exports[`Toggle should Toggle snapshot 4`] = `
"<div>
  <div data-group="true" class=" OHcpb6mbecymn_jvwl OHck7hf11blu0mqifa OLcursor-vpointer OHa8_8n2alwf3oubm2 OHbpp24yclj9od9q85 OHckda58d96gj5bly0 OHdit8m7997wtw7bem OHaoeu23px7o0vhcq1 RHbansxgyr8bgxkfmu OLheight-v28px RHam1rr89b7z6bsawm OLpadding-v4px   RHb50seyoq89wvebmm OLwidth-v50px">
    <div class=" OHa27vz2igz6c7klbx OHdlgner8s0_zhmqu_ OLheight-v20px OLwidth-v20px OLoutline-v4px OHcsqacomjnix7p_wp OHaoeu23px7o0vhcq1    RHb_rk0wp7a8rynsfj">
    </div>
  </div>
  <input type="hidden" value="true">
</div>"
`;

exports[`Toggle should Toggle snapshot 5`] = `
"<div>
  <div data-group="true" class=" OHcpb6mbecymn_jvwl OHck7hf11blu0mqifa OLcursor-vpointer OHa8_8n2alwf3oubm2 OHbpp24yclj9od9q85 OHckda58d96gj5bly0 OHdit8m7997wtw7bem OHaoeu23px7o0vhcq1 RHaqd7161j8_2ivxzf OLheight-v8px     RHdidckvlum8ldfq02 OLwidth-v40px">
    <div class=" OHa27vz2igz6c7klbx OHdlgner8s0_zhmqu_ OLheight-v20px OLwidth-v20px OLoutline-v4px OHcsqacomjnix7p_wp OHaoeu23px7o0vhcq1 OHdh1mzna1nrjyx75d OHa1ah8nw8vxfgirqr OHdgqgmo7kvmv76ev4 OLtop-v_d6px ">
    </div>
  </div>
  <input type="hidden" value="false">
</div>"
`;

exports[`Toggle should Toggle snapshot 6`] = `
"<div>
  <div aria-disabled="true" data-group="true" class=" OHcpb6mbecymn_jvwl OHck7hf11blu0mqifa OLcursor-vpointer OHa8_8n2alwf3oubm2 OHbpp24yclj9od9q85 OHckda58d96gj5bly0 OHdit8m7997wtw7bem OHaoeu23px7o0vhcq1 RHaqd7161j8_2ivxzf OLheight-v8px     RHdidckvlum8ldfq02 OLwidth-v40px">
    <div class=" OHa27vz2igz6c7klbx OHdlgner8s0_zhmqu_ OLheight-v20px OLwidth-v20px OLoutline-v4px OHcsqacomjnix7p_wp OHaoeu23px7o0vhcq1 OHdh1mzna1nrjyx75d OHa1ah8nw8vxfgirqr OHdgqgmo7kvmv76ev4 OLtop-v_d6px ">
    </div>
  </div>
  <input type="hidden" value="false">
</div>"
`;

exports[`Toggle should Toggle snapshot 7`] = `
"<div>
  <div data-group="true" class=" OHcpb6mbecymn_jvwl OHck7hf11blu0mqifa OLcursor-vpointer OHa8_8n2alwf3oubm2 OHbpp24yclj9od9q85 OHckda58d96gj5bly0 OHdit8m7997wtw7bem OHaoeu23px7o0vhcq1 RHbansxgyr8bgxkfmu OLheight-v8px RHam1rr89b7z6bsawm    RHb50seyoq89wvebmm OLwidth-v40px">
    <div class=" OHa27vz2igz6c7klbx OHdlgner8s0_zhmqu_ OLheight-v20px OLwidth-v20px OLoutline-v4px OHcsqacomjnix7p_wp OHaoeu23px7o0vhcq1 OHdh1mzna1nrjyx75d OHa1ah8nw8vxfgirqr OHdgqgmo7kvmv76ev4 OLtop-v_d6px RHb_rk0wp7a8rynsfj">
    </div>
  </div>
  <input type="hidden" value="true">
</div>"
`;

exports[`Toggle should Toggle snapshot 8`] = `
"<div>
  <div data-group="true" class=" OHcpb6mbecymn_jvwl OHck7hf11blu0mqifa OLcursor-vpointer OHa8_8n2alwf3oubm2 OHbpp24yclj9od9q85 OHckda58d96gj5bly0 OHdit8m7997wtw7bem OHaoeu23px7o0vhcq1 RHbansxgyr8bgxkfmu OLheight-v8px RHam1rr89b7z6bsawm    RHb50seyoq89wvebmm OLwidth-v40px">
    <div class=" OHa27vz2igz6c7klbx OHdlgner8s0_zhmqu_ OLheight-v20px OLwidth-v20px OLoutline-v4px OHcsqacomjnix7p_wp OHaoeu23px7o0vhcq1 OHdh1mzna1nrjyx75d OHa1ah8nw8vxfgirqr OHdgqgmo7kvmv76ev4 OLtop-v_d6px RHb_rk0wp7a8rynsfj">
    </div>
  </div>
  <input type="hidden" value="true">
</div>"
`;

exports[`Toggle should Toggle snapshot 9`] = `
"<div>
  <div data-group="true" class="test-toggle-wrapper   OHcpb6mbecymn_jvwl OHck7hf11blu0mqifa OLcursor-vpointer OHa8_8n2alwf3oubm2 OHbpp24yclj9od9q85 OHckda58d96gj5bly0 OHdit8m7997wtw7bem OHaoeu23px7o0vhcq1 RHbansxgyr8bgxkfmu OLheight-v8px RHam1rr89b7z6bsawm    RHb50seyoq89wvebmm OLwidth-v40px">
    <div class="test-toggle OHa27vz2igz6c7klbx OHdlgner8s0_zhmqu_ OLheight-v20px OLwidth-v20px OLoutline-v4px OHcsqacomjnix7p_wp OHaoeu23px7o0vhcq1 OHdh1mzna1nrjyx75d OHa1ah8nw8vxfgirqr OHdgqgmo7kvmv76ev4 OLtop-v_d6px RHb_rk0wp7a8rynsfj">
    </div>
  </div>
  <input type="hidden" value="true">
</div>"
`;

exports[`Toggle should Toggle snapshot 10`] = `
"<div>
  <div data-group="true" class=" OHcpb6mbecymn_jvwl OHck7hf11blu0mqifa OLcursor-vpointer OHa8_8n2alwf3oubm2 OHbpp24yclj9od9q85 OHckda58d96gj5bly0 OHdit8m7997wtw7bem OHaoeu23px7o0vhcq1 RHbansxgyr8bgxkfmu OLheight-v8px RHam1rr89b7z6bsawm    RHb50seyoq89wvebmm OLwidth-v40px" style="background-color: blue;">
    <div class=" OHa27vz2igz6c7klbx OHdlgner8s0_zhmqu_ OLheight-v20px OLwidth-v20px OLoutline-v4px OHcsqacomjnix7p_wp OHaoeu23px7o0vhcq1 OHdh1mzna1nrjyx75d OHa1ah8nw8vxfgirqr OHdgqgmo7kvmv76ev4 OLtop-v_d6px RHb_rk0wp7a8rynsfj" style="background-color: blue;">
    </div>
  </div>
  <input type="hidden" value="true">
</div>"
`;

exports[`Toggle should Toggle snapshot 11`] = `
"<div>
  <div data-group="true" class=" OHcpb6mbecymn_jvwl OHck7hf11blu0mqifa OLcursor-vpointer OHa8_8n2alwf3oubm2 OHbpp24yclj9od9q85 OHckda58d96gj5bly0 OHdit8m7997wtw7bem OHaoeu23px7o0vhcq1 RHaqd7161j8_2ivxzf OLheight-v28px  OLpadding-v4px   RHdidckvlum8ldfq02 OLwidth-v50px" style="--primary: blue; --bg: blue; --primaryHoverBg: blue; --hoverBg: blue; --disabledBg: blue;">
    <div class=" OHa27vz2igz6c7klbx OHdlgner8s0_zhmqu_ OLheight-v20px OLwidth-v20px OLoutline-v4px OHcsqacomjnix7p_wp OHaoeu23px7o0vhcq1    " style="--primary: blue; --primaryHoverBg: blue; --switchShadow: blue; --switchHoverOutline: blue;">
    </div>
  </div>
  <input type="hidden" value="false">
</div>"
`;

exports[`Toggle should Toggle snapshot 12`] = `
"<div>
  <div data-group="true" class=" OHcpb6mbecymn_jvwl OHck7hf11blu0mqifa OLcursor-vpointer OHa8_8n2alwf3oubm2 OHbpp24yclj9od9q85 OHckda58d96gj5bly0 OHdit8m7997wtw7bem OHaoeu23px7o0vhcq1 RHaqd7161j8_2ivxzf OLheight-v8px     RHdidckvlum8ldfq02 OLwidth-v40px" style="--primary: blue; --bg: blue; --primaryHoverBg: blue; --hoverBg: blue; --disabledBg: blue;">
    <div class=" OHa27vz2igz6c7klbx OHdlgner8s0_zhmqu_ OLheight-v20px OLwidth-v20px OLoutline-v4px OHcsqacomjnix7p_wp OHaoeu23px7o0vhcq1 OHdh1mzna1nrjyx75d OHa1ah8nw8vxfgirqr OHdgqgmo7kvmv76ev4 OLtop-v_d6px " style="--primary: blue; --primaryHoverBg: blue; --switchShadow: blue; --switchHoverOutline: blue;">
    </div>
  </div>
  <input type="hidden" value="false">
</div>"
`;
